Fix interwiki scrollbar issue on darkbody.

--- a/css/colors/darkbody.colors.css
+++ b/css/colors/darkbody.colors.css
@@ -163,7 +163,8 @@ div#container-wrap {
 /* Interwiki IFrame */
 
 iframe.scpnet-interwiki-frame {
-	height: auto;
+	height: 300px;
+	width: auto;
 }
 
 .international-entry:nth-child(even), .alternate:nth-child(even) {
@@ -176,7 +177,8 @@ iframe.scpnet-interwiki-frame {
 	background: #DCDCDC;
 	border: 1px solid #2F4F4F;
     box-shadow: 0 2px 6px rgba(32,32,32,1) !important;
-	padding: 5px 0;
+	padding: 10px;
+	width: auto;
 }
 
 .interwiki__title {
